[gd_scene load_steps=4 format=3 uid="uid://b6mvjlogkk0l6"]

[ext_resource type="Script" uid="uid://ba43kighewjt" path="res://Scripts/ResourcePickup.gd" id="1_yxcxt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6rqk7"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1maeg"]
radius = 30.0167

[node name="ResourcePickup" type="CharacterBody2D"]
collision_layer = 2
floor_stop_on_slope = false
script = ExtResource("1_yxcxt")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6rqk7")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_1maeg")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
